--- a/README.html
+++ b/README.html
@@ -74,13 +74,9 @@ img {
 </div>
 <div id="histogram-of-the-total-number-of-steps-taken-each-day" class="section level2">
 <h2>Histogram of the total number of steps taken each day</h2>
-<pre class="{r}"><code>
-steps.per.day&lt;- aggregate(steps ~ date, activity.data, sum)
-hist(steps.per.day$steps, col = &quot;red&quot;, xlab = &quot;number of steps&quot;, main = &quot;Number of Steps Taken per Day - October and November, 2012&quot;)
-
-![alt text](images/image-0.png)
-
-</code></pre>
+<p>```{r echo=TRUE}</p>
+<p>steps.per.day&lt;- aggregate(steps ~ date, activity.data, sum) hist(steps.per.day$steps, col = “red”, xlab = “number of steps”, main = “Number of Steps Taken per Day - October and November, 2012”)</p>
+<p>```</p>
 </div>
 <div id="mean-and-median-number-of-steps-taken-each-day" class="section level2">
 <h2>Mean and median number of steps taken each day</h2>
